# CleaningDataVideo

./: .gitignore  00-Preface.ipynb  01-Data_Ingestion-Tabular.ipynb  02-Data_Ingestion-Hierarchical.ipynb  03-Data_Ingestion-Other.ipynb  04-Anomaly_Detection.ipynb  05-Data_Quality.ipynb  06-Value_Imputation.ipynb  07-Feature_Engineering.ipynb  99-Outtakes.ipynb  Anomaly_Detection.ipynb  Anomaly_Detection.slides.html  Data_Ingestion-Hierarchical.ipynb  Data_Ingestion-Hierarchical.slides.html  Data_Ingestion-Other.ipynb  Data_Ingestion-Other.slides.html  Data_Ingestion-Tabular.ipynb  Data_Ingestion-Tabular.slides.html  Data_Quality.ipynb  Data_Quality.slides.html  Exercises.ipynb  Feature_Engineering.ipynb  Glossary.ipynb  Marginalia.ipynb  Preface.ipynb  Preface.slides.html  README.md  Table-of-Contents.ipynb  Value_Imputation.ipynb  Value_Imputation.slides.html  environment.yml  image-source.md  pyproject.toml  setup.R
data/: .Rhistory  sentinels.db  users.xml
src/: intro_students.py  setup.py
