[project]
name = "Cleaning-Data-Video"
version = "2024.12.01"
requires-python = ">=3.13"
description = "Cleaning Data Video (Pearson)"
authors = [
  {name = "David Mertz, Ph.D.", email = "mertz@gnosis.cx"},
]
readme = "README.md"
dependencies = [
   "altair",
   "beautifulsoup4",
   "csvkit",
   "great_tables",
   "imbalanced-learn",
   "jupyterlab",
   "jupyterlab-rise>=0.42.0",
   "lxml",
   "matplotlib",
   "Metaphone",
   "nbconvert[webpdf]",
   "nltk",
   "pandas",
   "polars",
   "pymongo",
   "scikit-learn",
   "simplejson",
   "sqlalchemy",
   "sqlalchemy-utils",
]
[tool.ruff]
# Allow lines to 88 chars (Black compatible).
line-length = 88
